# rdf_vocabularies

./: .gitignore  .gitpod.yml  Cargo.toml  README.md
.github/workflows/: rust-ci.yml
codegen/: Cargo.toml  README.md
codegen/src/: ensure_nq.rs  gen.rs  gen_dataset.rs  gen_features.rs  gen_ns.rs  lib.rs  main.rs  ns_entity_index.rs  ns_item_index.rs  onto_index.rs  vocab_index.rs
codegen/src/helpers/: ident.rs  io.rs  key_words.rs  mod.rs  rdf_arc_dataset.rs  rdf_term.rs  rdf_types.rs
codegen/src/templates/: dataset_index_mod.hbs  dataset_mod.hbs  mod.rs  ns_index_mod.hbs  ns_mod.hbs
ontologies_ext/: _index.nq  acp.nq  cert.nq  gold.nq  lexvo.nq  lime.nq  oidc.nq  ontolex.nq  pim.nq  solid.nq  solid_protocol_0_9.nq  spec.nq  stat.nq  vartrans.nq
scripts/: dataset_mod_template.rs  gen_vocab.py
src/: lib.rs
src/_utils/: mod.rs
src/dataset/: acl.rs  acp.rs  as_.rs  bibo.rs  cc.rs  cert.rs  cnt.rs  constant.rs  csvw.rs  dash.rs  dbo.rs  dc11.rs  dcam.rs  dcat.rs  dcmitype.rs  dcterms.rs  discipline.rs  doap.rs  dpv.rs  dqv.rs  dtype.rs  duv.rs  earl.rs  ebucore.rs  exif.rs  foaf.rs  frbr.rs  geo.rs  geof.rs  geor.rs  gn.rs  gold.rs  gr.rs  grddl.rs  gs1.rs  gtfs.rs  http.rs  hydra.rs  ical.rs  ldp.rs  (+55 more)
src/ns/: acl.rs  acp.rs  as_.rs  bibo.rs  cc.rs  cert.rs  cnt.rs  constant.rs  csvw.rs  dash.rs  dbo.rs  dc11.rs  dcam.rs  dcat.rs  dcmitype.rs  dcterms.rs  discipline.rs  doap.rs  dpv.rs  dqv.rs  dtype.rs  duv.rs  earl.rs  ebucore.rs  exif.rs  foaf.rs  frbr.rs  geo.rs  geof.rs  geor.rs  gn.rs  gold.rs  gr.rs  grddl.rs  gs1.rs  gtfs.rs  http.rs  hydra.rs  ical.rs  ldp.rs  (+55 more)
