[package]
name = "rdf_vocabularies"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["codegen" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = {version = "1.9.0", optional = true}
# 0.7.1 seems not working with stable toolchain. due to mownstr bug. Till that fixed.
sophia_api = {version = "0.7.1", optional = true}
sophia_turtle = {version = "0.7.1", optional = true}
sophia_rio = {version = "0.7.1", optional = true}
sophia_inmem = {version = "0.7.1", optional = true}
rio_turtle = {version = "0.6.1", optional = true}
mownstr = {version = "0.1.3", optional = true}
serde = "1.0.133"



[features]
default = ["ns", "dataset"]
ns = []
dataset = ["once_cell", "sophia_api", "sophia_turtle", "sophia_rio", "sophia_inmem", "rio_turtle", "mownstr"]

[dev-dependencies]
claim = "0.5.0"


[build-dependencies]
walkdir = "2.2"
heck = "0.4"
quote = "1.0"
rustfmt = "0.10"
proc-macro2 = "1.0"
syn = {version = "1.0.80", features = ["full", "visit", "fold", "extra-traits"]}
sophia_term = "0.7.1"
sophia_api = {version = "0.7.1", optional = true}
sophia_turtle = {version = "0.7.1", optional = true}
sophia_rio = {version = "0.7.1", optional = true}
sophia_inmem = {version = "0.7.1", optional = true}
rio_turtle = {version = "0.6.1", optional = true}
mownstr = {version = "0.1.3", optional = true}
indexmap = "1.7.0"
