[dependencies.once_cell]
optional = true
version = '1.9.0'

[dependencies.rdf_utils]
optional = true
version = '0.2.0'

[dependencies.rio_turtle]
optional = true
version = '0.6.2'

[dependencies.sophia_api]
version = '0.7.2'

[dependencies.sophia_inmem]
optional = true
version = '0.7.2'

[dependencies.sophia_rio]
optional = true
version = '0.7.2'

[dependencies.sophia_turtle]
optional = true
version = '0.7.2'

[dev-dependencies]
claim = '0.5.0'

[features]
dataset = [
    'once_cell',
    'sophia_turtle',
    'sophia_rio',
    'sophia_inmem',
    'rio_turtle',
    'rdf_utils',
]
dataset-acl = ['dataset']
dataset-as_ = ['dataset']
dataset-bibo = ['dataset']
dataset-cc = ['dataset']
dataset-cert = ['dataset']
dataset-cnt = ['dataset']
dataset-constant = ['dataset']
dataset-csvw = ['dataset']
dataset-dash = ['dataset']
dataset-dbo = ['dataset']
dataset-dc11 = ['dataset']
dataset-dcam = ['dataset']
dataset-dcat = ['dataset']
dataset-dcmitype = ['dataset']
dataset-dcterms = ['dataset']
dataset-discipline = ['dataset']
dataset-doap = ['dataset']
dataset-dpv = ['dataset']
dataset-dqv = ['dataset']
dataset-dtype = ['dataset']
dataset-duv = ['dataset']
dataset-earl = ['dataset']
dataset-ebucore = ['dataset']
dataset-exif = ['dataset']
dataset-foaf = ['dataset']
dataset-frbr = ['dataset']
dataset-geo = ['dataset']
dataset-geof = ['dataset']
dataset-geor = ['dataset']
dataset-gn = ['dataset']
dataset-gold = ['dataset']
dataset-gr = ['dataset']
dataset-grddl = ['dataset']
dataset-gs1 = ['dataset']
dataset-gtfs = ['dataset']
dataset-http = ['dataset']
dataset-hydra = ['dataset']
dataset-ical = ['dataset']
dataset-ldp = ['dataset']
dataset-lexvo = ['dataset']
dataset-lime = ['dataset']
dataset-locn = ['dataset']
dataset-lvont = ['dataset']
dataset-ma = ['dataset']
dataset-oa = ['dataset']
dataset-og = ['dataset']
dataset-oidc = ['dataset']
dataset-ontolex = ['dataset']
dataset-org = ['dataset']
dataset-owl = ['dataset']
dataset-pim = ['dataset']
dataset-prefix = ['dataset']
dataset-prov = ['dataset']
dataset-qb = ['dataset']
dataset-qkdv = ['dataset']
dataset-quantitykind = ['dataset']
dataset-qudt = ['dataset']
dataset-rdau = ['dataset']
dataset-rdf = ['dataset']
dataset-rdfa = ['dataset']
dataset-rdfs = ['dataset']
dataset-rico = ['dataset']
dataset-rr = ['dataset']
dataset-rss = ['dataset']
dataset-schema = ['dataset']
dataset-sd = ['dataset']
dataset-sdmx = ['dataset']
dataset-sem = ['dataset']
dataset-sh = ['dataset']
dataset-shex = ['dataset']
dataset-sioc = ['dataset']
dataset-skos = ['dataset']
dataset-skosxl = ['dataset']
dataset-solid = ['dataset']
dataset-solid_protocol_0_9 = ['dataset']
dataset-sosa = ['dataset']
dataset-sou = ['dataset']
dataset-spec = ['dataset']
dataset-ssn = ['dataset']
dataset-stat = ['dataset']
dataset-test = ['dataset']
dataset-time = ['dataset']
dataset-unit = ['dataset']
dataset-vaem = ['dataset']
dataset-vann = ['dataset']
dataset-vartrans = ['dataset']
dataset-vcard = ['dataset']
dataset-void = ['dataset']
dataset-vs = ['dataset']
dataset-wgs = ['dataset']
dataset-xhv = ['dataset']
dataset-xkos = ['dataset']
dataset-xsd = ['dataset']
ns-acl = []
ns-as_ = []
ns-bibo = []
ns-cc = []
ns-cert = []
ns-cnt = []
ns-constant = []
ns-csvw = []
ns-dash = []
ns-dbo = []
ns-dc11 = []
ns-dcam = []
ns-dcat = []
ns-dcmitype = []
ns-dcterms = []
ns-discipline = []
ns-doap = []
ns-dpv = []
ns-dqv = []
ns-dtype = []
ns-duv = []
ns-earl = []
ns-ebucore = []
ns-exif = []
ns-foaf = []
ns-frbr = []
ns-geo = []
ns-geof = []
ns-geor = []
ns-gn = []
ns-gold = []
ns-gr = []
ns-grddl = []
ns-gs1 = []
ns-gtfs = []
ns-http = []
ns-hydra = []
ns-ical = []
ns-ldp = []
ns-lexvo = []
ns-lime = []
ns-locn = []
ns-lvont = []
ns-ma = []
ns-oa = []
ns-og = []
ns-oidc = []
ns-ontolex = []
ns-org = []
ns-owl = []
ns-pim = []
ns-prefix = []
ns-prov = []
ns-qb = []
ns-qkdv = []
ns-quantitykind = []
ns-qudt = []
ns-rdau = []
ns-rdf = []
ns-rdfa = []
ns-rdfs = []
ns-rico = []
ns-rr = []
ns-rss = []
ns-schema = []
ns-sd = []
ns-sdmx = []
ns-sem = []
ns-sh = []
ns-shex = []
ns-sioc = []
ns-skos = []
ns-skosxl = []
ns-solid = []
ns-solid_protocol_0_9 = []
ns-sosa = []
ns-sou = []
ns-spec = []
ns-ssn = []
ns-stat = []
ns-test = []
ns-time = []
ns-unit = []
ns-vaem = []
ns-vann = []
ns-vartrans = []
ns-vcard = []
ns-void = []
ns-vs = []
ns-wgs = []
ns-xhv = []
ns-xkos = []
ns-xsd = []

[package]
description = '''This crate is a distribution of few most commonly used RDF vocabularies. It also provides sophia terms for each vocabulary's terminology.'''
edition = '2021'
keywords = [
    'rdf',
    'vocabularies',
    'namespace',
]
license = 'MIT OR Apache-2.0'
name = 'rdf_vocabularies'
repository = 'https://github.com/manomayam/rdf_vocabularies'
version = '0.1.7'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    '--cfg',
    'docsrs',
]

[workspace]
members = ['codegen']
