[dependencies.sophia_api]
version = '0.9.0'

[dev-dependencies]
claims = '0.8.0'

[features]
ns-acl = []
ns-acp = []
ns-as_ = []
ns-bibo = []
ns-cc = []
ns-cert = []
ns-cnt = []
ns-constant = []
ns-csvw = []
ns-dash = []
ns-dbo = []
ns-dc11 = []
ns-dcam = []
ns-dcat = []
ns-dcmitype = []
ns-dcterms = []
ns-discipline = []
ns-doap = []
ns-dpv = []
ns-dqv = []
ns-dtype = []
ns-duv = []
ns-earl = []
ns-ebucore = []
ns-exif = []
ns-foaf = []
ns-frbr = []
ns-geo = []
ns-geof = []
ns-geor = []
ns-gn = []
ns-gold = []
ns-gr = []
ns-grddl = []
ns-gs1 = []
ns-gtfs = []
ns-http = []
ns-hydra = []
ns-ical = []
ns-ldp = []
ns-lexvo = []
ns-lime = []
ns-locn = []
ns-lvont = []
ns-ma = []
ns-oa = []
ns-og = []
ns-oidc = []
ns-ontolex = []
ns-org = []
ns-owl = []
ns-pim = []
ns-prefix = []
ns-prov = []
ns-qb = []
ns-qkdv = []
ns-quantitykind = []
ns-qudt = []
ns-rdau = []
ns-rdf = []
ns-rdfa = []
ns-rdfs = []
ns-rico = []
ns-rr = []
ns-rss = []
ns-schema = []
ns-sd = []
ns-sdmx = []
ns-sem = []
ns-sh = []
ns-shex = []
ns-sioc = []
ns-skos = []
ns-skosxl = []
ns-solid = []
ns-solid_protocol_0_9 = []
ns-sosa = []
ns-sou = []
ns-spec = []
ns-ssn = []
ns-stat = []
ns-test = []
ns-time = []
ns-unit = []
ns-vaem = []
ns-vann = []
ns-vartrans = []
ns-vcard = []
ns-void = []
ns-vs = []
ns-wgs = []
ns-xhv = []
ns-xkos = []
ns-xsd = []

[package]
description = '''This crate is a distribution of few most commonly used RDF vocabularies. It also provides sophia terms for each vocabulary's terminology.'''
edition = '2024'
keywords = [
    'rdf',
    'vocabularies',
    'namespace',
]
license = 'MIT OR Apache-2.0'
name = 'rdf_vocabularies'
repository = 'https://github.com/manomayam/rdf_vocabularies'
version = '0.2.1'
[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    '--cfg',
    'docsrs',
]

[workspace]
members = ['codegen']
