[package]
name = "codegen"
version = "0.1.0"
edition = "2021"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.2"
heck = "0.4"
quote = "1.0"
rustfmt = "0.10"
proc-macro2 = "1.0"
syn = {version = "1.0.80", features = ["full", "visit", "fold", "extra-traits"]}
sophia_term = "0.7.1"
sophia_api = "0.7.1"
sophia_turtle = "0.7.1"
sophia_rio = "0.7.1"
sophia_inmem = "0.7.1"
rio_turtle = {version = "0.6.1"}
mownstr = {version = "0.1.3"}
indexmap = "1.7.0"
serde = "1.0.133"

[dev-dependencies]
claim = "0.5.0"
