[package]
name = "rdf_vocabularies_codegen"
version = "0.1.0"
edition = "2021"
workspace = "../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sophia_term = "0.7.1"
sophia_api = "0.7.1"
sophia_turtle = "0.7.1"
sophia_rio = "0.7.1"
sophia_inmem = "0.7.1"
rio_turtle = {version = "0.6.1"}
mownstr = {version = "0.1.3"}
indexmap = "1.7.0"
serde = {version = "1.0.133", features=["derive"]}
serde_json = "1.0.74"
once_cell = "1.9.0"
handlebars = "4.1.6"
anyhow = "1.0.52"
env_logger = "0.9.0"
log = "0.4.14"
rdf_utils = "0.1.0"
toml = "0.5.8"
regex = "1.5.4"
syn = "1.0.84"
rdf_dynsyn = "0.1.0"
reqwest = {version = "0.11.9", features=["blocking"]}
http = "0.2.6"
mime = "0.3.16"

[dev-dependencies]
claim = "0.5.0"
